* Fixed appending non-float variables with different sub-dimensions when
  using the Python harp.collocate() function.

* Updates to product ingestions:
  - GOME-2 L2: added support for O3MARS aerosol layer height and added
    support for O3MARP V5
  - S5P PAL L2: added support for SRON/SICOR HDO (L2__HDO__S) product

1.23 2024-07-30
~~~~~~~~~~~~~~~

* Fixed numpy 2.x compatibility issues in python interface.

* Added derivations to retrieve dry air mass/volume mixing ratio from H2O
  mass/volume mixing ratio with regard to dry air.

* Fixed some issues with building the HARP R interface extension.

* Updates to product ingestions:
  - S5P PAL L2 AOT: added support for cloud_fraction vs.
    effective_cloud_fraction split

1.22 2024-06-12
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - EARLINET: fixed memory issue when reading extinction data.
  - EarthCARE: updates for new V11.2 format definition baseline
  - GEOMS UVVIS.DOBSON: fixed issue with reading of int16 typed data.
  - S5P PAL L2 SO2 COBRA: fixed cloud_fraction option behaviour and added
    alternative qa value calculation for processor V02.00.00.

1.21 2024-03-15
~~~~~~~~~~~~~~~

* Fixed incorrect weight division for random uncertainties in spatial binning.

* Added check for unit equality when appending variables.

* Fixed CMake build for locating Python 3.12.

* Updates to product ingestions:
  - EarthCARE: updates for new V11 format definition baseline
  - ECMWF GRIB: added general support for new masterTablesVersion numbers
  - S5P L2 CH4: added support for nir aerosol/cloud/surface property ingestion.
  - S5P L2 CLOUD: added support for nir-band spatial grid data
  - S5P PAL L2: added support for OClO
  - S5P PAL L2 AOT: added support for V02.00.00 output format
  - S5P PAL L2 BRO: fixed memory issue with reading total column and
    uncertainty variables
  - S5P PAL L2 TCWV: fixed wrong quantity for density variables

1.20.2 2023-11-13
~~~~~~~~~~~~~~~~~
